<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team2.calendarapp.CreateEvent">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event Page"
        android:textSize="25dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Event Name"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"/>

    <EditText
        android:id="@+id/etEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14dp"
        android:hint="Required"
        app:layout_constraintBottom_toBottomOf="@+id/tvEventName"
        app:layout_constraintStart_toEndOf="@+id/tvEventName"
        app:layout_constraintTop_toTopOf="@+id/tvEventName" />

    <TextView
        android:id="@+id/tvEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Event Date"
        app:layout_constraintStart_toStartOf="@+id/tvEventName"
        app:layout_constraintTop_toBottomOf="@+id/tvEventName" />

    <EditText
        android:id="@+id/etEventMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="2"
        android:inputType="number"
        android:hint="Month"
        app:layout_constraintBottom_toBottomOf="@+id/tvEventDate"
        app:layout_constraintStart_toEndOf="@+id/tvEventDate"
        app:layout_constraintTop_toTopOf="@+id/tvEventDate" />

    <EditText
        android:id="@+id/etEventDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="2"
        android:inputType="number"
        android:hint="Day"
        app:layout_constraintBottom_toBottomOf="@+id/tvEventDate"
        app:layout_constraintStart_toEndOf="@+id/etEventMonth"
        app:layout_constraintTop_toTopOf="@+id/tvEventDate" />

    <EditText
        android:id="@+id/etEventYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="4"
        android:inputType="number"
        android:hint="Year"
        app:layout_constraintBottom_toBottomOf="@+id/tvEventDate"
        app:layout_constraintStart_toEndOf="@+id/etEventDay"
        app:layout_constraintTop_toTopOf="@+id/tvEventDate" />

    <TextView
        android:id="@+id/tvEventLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Event Location"
        app:layout_constraintStart_toStartOf="@+id/tvEventEnd"
        app:layout_constraintTop_toBottomOf="@+id/tvEventEnd" />

    <EditText
        android:id="@+id/etEventLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/tvEventLocation"
        app:layout_constraintStart_toEndOf="@+id/tvEventLocation"
        app:layout_constraintTop_toTopOf="@+id/tvEventLocation" />

    <TextView
        android:id="@+id/tvEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="EventDescription"
        app:layout_constraintStart_toStartOf="@+id/tvEventLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvEventLocation" />

    <EditText
        android:id="@+id/etEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/tvEventDescription"
        app:layout_constraintStart_toEndOf="@+id/tvEventDescription"
        app:layout_constraintTop_toTopOf="@+id/tvEventDescription" />

    <TextView
        android:id="@+id/tvEventCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Event Category"
        app:layout_constraintStart_toStartOf="@+id/tvEventDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvEventDescription" />

    <Spinner
        android:id="@+id/sEventCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvEventCategory"
        app:layout_constraintStart_toEndOf="@+id/tvEventCategory"
        app:layout_constraintTop_toTopOf="@+id/tvEventCategory" />

    <TextView
        android:id="@+id/tvEventStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Event Start Time"
        app:layout_constraintStart_toStartOf="@+id/tvEventDate"
        app:layout_constraintTop_toBottomOf="@+id/tvEventDate" />

    <EditText
        android:id="@+id/etEventStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="5"
        android:inputType="time"
        android:hint="Required"
        app:layout_constraintBottom_toBottomOf="@+id/tvEventStart"
        app:layout_constraintStart_toEndOf="@+id/tvEventStart"
        app:layout_constraintTop_toTopOf="@+id/tvEventStart" />

    <ToggleButton
        android:id="@+id/tbStartAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textOn="AM"
        android:textOff="PM"
        app:layout_constraintStart_toEndOf="@+id/etEventStart"
        app:layout_constraintTop_toTopOf="@+id/etEventStart"
        app:layout_constraintBottom_toBottomOf="@+id/etEventStart" />

    <TextView
        android:id="@+id/tvEventEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Event End Time"
        app:layout_constraintStart_toStartOf="@+id/tvEventStart"
        app:layout_constraintTop_toBottomOf="@+id/tvEventStart" />

    <EditText
        android:id="@+id/etEventEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="5"
        android:inputType="time"
        android:hint="Required"
        app:layout_constraintBottom_toBottomOf="@+id/tvEventEnd"
        app:layout_constraintStart_toEndOf="@+id/tvEventEnd"
        app:layout_constraintTop_toTopOf="@+id/tvEventEnd" />

    <ToggleButton
        android:id="@+id/tbEndAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textOn="AM"
        android:textOff="PM"
        app:layout_constraintStart_toEndOf="@+id/etEventEnd"
        app:layout_constraintTop_toTopOf="@+id/etEventEnd"
        app:layout_constraintBottom_toBottomOf="@+id/etEventEnd" />

    <Button
        android:id="@+id/bSaveEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Save Event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bCreateCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Add New\nCategory"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/sEventCategory"
        app:layout_constraintStart_toEndOf="@+id/sEventCategory"
        app:layout_constraintTop_toTopOf="@+id/sEventCategory" />

    <Button
        android:id="@+id/bCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="@+id/bSaveEvent"
        app:layout_constraintEnd_toStartOf="@+id/bSaveEvent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Delete Event"
        app:layout_constraintBottom_toBottomOf="@+id/bSaveEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bSaveEvent" />

</android.support.constraint.ConstraintLayout>
