<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/white">

	<!-- date toolbar -->
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="12dp"
		android:paddingBottom="12dp"
		android:paddingLeft="30dp"
		android:paddingRight="30dp">

		<!-- prev button -->
		<ImageView
			android:id="@+id/calendar_prev_button"
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:layout_centerVertical="true"
			android:layout_alignParentLeft="true"
			android:src="@drawable/previous_icon"/>

		<!-- date title -->
		<TextView
			android:id="@+id/calendar_date_display"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_toRightOf="@+id/calendar_prev_button"
			android:layout_toLeftOf="@+id/calendar_next_button"
			android:gravity="center"
			android:textAppearance="@android:style/TextAppearance.Medium"
			android:textColor="#222222"
			android:text="current date"/>

		<!-- next button -->
		<ImageView
			android:id="@+id/calendar_next_button"
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:layout_centerVertical="true"
			android:layout_alignParentRight="true"
			android:src="@drawable/next_icon"/>
	</RelativeLayout>

	<!-- days header -->
	<LinearLayout
		android:id="@+id/calendar_header"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:textColor="#222222"
			android:text="SUN"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:textColor="#222222"
			android:text="MON"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:textColor="#222222"
			android:text="TUE"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:textColor="#222222"
			android:text="WED"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:textColor="#222222"
			android:text="THU"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:textColor="#222222"
			android:text="FRI"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:textColor="#222222"
			android:text="SAT"/>
	</LinearLayout>

	<!-- days view : can change cell spacing here-->
	<GridView
		android:id="@+id/calendar_grid"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:horizontalSpacing="15dp"
		android:verticalSpacing="30dp"
		android:numColumns="7">
	</GridView>
</LinearLayout>